# particle-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
.cache/clangd/index/: Angle.hpp.E5A6C07149A2D1EC.idx  Angle.inl.D03E954825D8E3F3.idx  BlendMode.cpp.D042714FEA7825B7.idx  BlendMode.hpp.5587E58001102BE1.idx  CircleShape.cpp.534F6E8007AB056F.idx  CircleShape.hpp.B30706C0A189324A.idx  Clipboard.cpp.BB286D1B3073C45E.idx  Clipboard.hpp.E5AB826870F0DF63.idx  ClipboardImpl.cpp.FE96453197E34F64.idx  ClipboardImpl.hpp.6BB430833050BFBA.idx  ClipboardImpl.hpp.8D87196020CA1133.idx  Clock.cpp.51255B3F0008BBB5.idx  Clock.hpp.F201555007BD3873.idx  Color.hpp.DF002EF458EB3358.idx  Color.inl.250065805F5C1A55.idx  Config.hpp.8A6D0B37B098DF62.idx  Context.cpp.325E24D8F0133C1B.idx  Context.hpp.FAF9FEEC7D91E0B4.idx  ContextSettings.hpp.2B7A85D2DDF20FD4.idx  ConvexShape.cpp.B929F9950038E230.idx  ConvexShape.hpp.3D4CC6F1A2519DB0.idx  CoordinateType.hpp.1134FA0A4CBE76E7.idx  Cursor.cpp.D1EB9C1A37A5DC8B.idx  Cursor.hpp.F14D246C7AF68B87.idx  CursorImpl.cpp.82F9C43578332A74.idx  CursorImpl.hpp.00BFFF7F2E85A58D.idx  CursorImpl.hpp.662BC3330215F1C7.idx  Display.cpp.94115BD669EA1081.idx  Display.hpp.A2CE52B1FCD9E683.idx  Drawable.hpp.37787EFA75D76FBC.idx  EnumArray.hpp.94236E5865D2F80C.idx  Err.cpp.D8EAEF9FAC18C64F.idx  Err.hpp.FFB89B3CC14B6206.idx  Event.hpp.A387A1B9EACEE51B.idx  Event.inl.9561A1BA9F167EB8.idx  Exception.hpp.459B2FB6BA7F10DA.idx  Export.hpp.30FBF16E60D0B5C7.idx  Export.hpp.312F4B409CC2BE23.idx  Export.hpp.D770D900EBD00096.idx  FileInputStream.cpp.A9F6EF42520C42C3.idx  (+141 more)
include/: constants.hpp  constraint.hpp  input_handler.hpp  math_utils.hpp  particle.hpp  platform_utils.hpp  statushud.hpp  warm_start.hpp
src/: main.cpp  math_utils.cpp  platform_utils.cpp  warm_start.cpp
